Getting flats and its component to list them

--- a/variables.env
+++ b/variables.env
@@ -1,2 +1,7 @@
 DB_MONGO=mongodb+srv://flat101:flat101@flat101.b3eqx.mongodb.net/flat101?retryWrites=true&w=majority
 SECRETA=flat101Secreta
+
+CLOUDINARY_NAME=aitorcloud
+CLOUDINARY_KEY=726654262827125
+CLOUDINARY_SECRET=csM-p-UA0xJlfsuNOZAvKKrzrHg
+CLOUDINARY_URL=cloudinary://726654262827125:csM-p-UA0xJlfsuNOZAvKKrzrHg@aitorcloud
